# django-render-fields

./: .gitignore  README.md  pyproject.toml  tasks.py
render_fields/: apps.py  views.py
render_fields/templates/cotton/render_fields/: field.html  fieldsets.html  row.html
render_fields/templates/render_fields/: fieldset.html  row.html  wrapper.html
render_fields/templates/render_fields/fields/: default.html  manytoonerel.html
render_fields/templatetags/: render_fields.py
